3.7_the_project_step16/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-step16
  namespace: project
  labels:
    name: project-step16
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      name: project-step16
  template:
    metadata:
      name: project-step16
      labels:
        name: project-step16
        version: v1
    spec:
      containers:
        - name: project-step16
          image: todo-app-image
